--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.js linguist-detectable=true
-*.HTML linguist-detectable=false
+*.js linguist-detectable=true  
+*.html linguist-detectable=false  
